# hospital-inquiry-poc

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: c23e7b00e11f_add_notifications.py  f0cee5455f74_initial_tables.py
app/: main.py  startup.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  audit.py  auth.py  escalations.py  kpi.py  messages.py  notifications.py  patients.py  tickets.py
app/core/: config.py  database.py  deps.py  security.py
app/models/: __init__.py  audit_log.py  base.py  escalation.py  message.py  notification.py  patient.py  ticket.py  user.py
app/schemas/: escalation.py  kpi.py  message.py  patient.py  ticket.py  user.py
app/services/: ai_service.py  notification_service.py  sla_service.py
docker/: nginx.conf
tests/: conftest.py
tests/integration/: test_auth.py  test_patients.py  test_tickets.py
tests/unit/: test_config_safety.py  test_security.py
